--- a/kubernetes/vpro-app/vproappdep.yml
+++ b/kubernetes/vpro-app/vproappdep.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vproapp
-        image: vprofile/vprofileapp
+        image: {{.Values.appimage }}
         ports:
         - name: vproapp-port
           containerPort: 8080
