--- a/helm/vprofilecharts/templates/rmq-dep.yaml
+++ b/helm/vprofilecharts/templates/rmq-dep.yaml
@@ -20,6 +20,7 @@ spec:
         ports:
         - name: vpromq01-port
           containerPort: 15672
+          
         env: 
          - name: RABBITMQ_DEFAULT_PASS
            valueFrom:
@@ -27,5 +28,4 @@ spec:
                name: app-secret
                key: rmq-pass
          - name: RABBITMQ_DEFAULT_USER
-           value: "test"
-
+           value: "guest"
